--- a/style/index.sass
+++ b/style/index.sass
@@ -1,3 +1,9 @@
+=line-limit($num)
+  display: -webkit-box
+  -webkit-line-clamp: $num
+  -webkit-box-orient: vertical
+  
+  
 body 
   margin: auto
   padding: 0
@@ -98,6 +104,11 @@ header
       animation: moveup 0.5s ease-out 0s 1 normal forwards
     .hidden
       display: block
+      font-size: 0.8em
+    .title
+      +line-limit(3)
+    .author
+      +line-limit(3)
   div
     position: relative
     top: 0px
@@ -109,16 +120,13 @@ header
     font-size: 0.9em
     font-weight: 400
     overflow: hidden
-    white-space: nowrap
     text-overflow: ellipsis
     line-height: 1.2em
-    max-height: 1.2em
-  button
-    margin: 0.3em 8px
+  .title
+    +line-limit(2)
   .author
     color: #757575
-  .year
-    font-size: 0.8em
+    +line-limit(1)  
   .hidden
     display: none
 
@@ -133,12 +141,15 @@ header
   padding: 12px 24px
   margin: 0px
   text-align: center
+  user-select: none
   a
     color: blue
     border: solid 1px grey
     padding: 3px 6px
     font-weight: 600
     text-decoration: none
+  .disabled
+    color: grey
 
 .subheader 
   margin: 12px 0px
